syntax = "proto3";

package editor.v1;
option go_package = "editor/v1;editorv1";

import "validate/validate.proto";
import "google/protobuf/timestamp.proto";

service TagService {
    rpc CreateTag(CreateTagRequest) returns (CreateTagResponse);
    rpc ListTags(ListTagsRequest) returns (ListTagsResponse);
}

message Tag {
    string name = 1;
    string author = 2;
    google.protobuf.Timestamp create_time = 50;
}

message CreateTagRequest {
    string tag_name = 1 [(validate.rules).string = { min_len: 3, max_len: 15 }]; // required
}

message CreateTagResponse {
    Tag tag = 1;
}

message ListTagsRequest {
    // The string value should follow SQL syntax: comma separated list of fields. 
    // For example: "foo,bar". 
    // The default sorting order is ascending. 
    // To specify descending order for a field, a suffix " desc" should be appended to the field name. 
    // For example: "foo desc,bar".
    string order_by = 1;     

    string page_token = 2;
}

message ListTagsResponse {
    repeated Tag tags = 1;
    string next_page_token = 2;
}